--- a/Application/Admin/View/Index/left.html
+++ b/Application/Admin/View/Index/left.html
@@ -27,33 +27,66 @@
             <table cellspacing=0 cellpadding=0 width="100%" border=0>
                 <tr><td height=10></td></tr>
             </table>
-            {foreach $pauth_info as $k => $v}
-                <table cellspacing=0 cellpadding=0 width=150 border=0>
-                    <tr height=22>
-                        <td style="padding-left: 30px" background={$smarty.const.ADMIN_IMG_URL}menu_bt.jpg>
-                            <a class=menuparent onclick=expand({$v.auth_id}) href="javascript:void(0);">{$v.auth_name}</a>
-                        </td>
-                    </tr>
-                    <tr height=4><td></td></tr>
-                </table>
-                <table id=child{$v.auth_id} style="display: none" cellspacing=0 cellpadding=0 width=150 border=0>
-                    {foreach $sauth_info as $kk => $vv}
-                        {*当前父级id与外边的id一致，才显示*}
-                        {if $vv.auth_pid == $v.auth_id}
-                            <tr height=20>
-                                <td align=middle width=30>
-                                   <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
-                                </td>
-                                <td>
-                                   <a class="menuchild" href="{$smarty.const.__MODULE__}/{$vv.auth_c}/{$vv.auth_a}" target="right">
-                                       {$vv.auth_name}
-                                   </a>
-                                </td>
-                            </tr>
-                        {/if}
-                    {/foreach}
-                </table>
-            {/foreach}
+            <table cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=22>
+                    <td style="padding-left: 30px" background="/Public/Admin/img/menu_bt.jpg">
+                        <a class=menuparent onclick="expand(10)" href="javascript:void(0);">个人中心</a>
+                    </td>
+                </tr>
+                <tr height=4><td></td></tr>
+            </table>
+            <table id="child10" style="display: none" cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="" target="right">
+                            个人信息
+                        </a>
+                    </td>
+                </tr>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Site/login')}" target="right">
+                            修改密码
+                        </a>
+                    </td>
+                </tr>
+            </table>
+            <table cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=22>
+                    <td style="padding-left: 30px" background="/Public/Admin/img/menu_bt.jpg">
+                        <a class=menuparent onclick="expand(20)" href="javascript:void(0);">菜单管理</a>
+                    </td>
+                </tr>
+                <tr height=4><td></td></tr>
+            </table>
+            <table id="child20" style="display: none" cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Menu/add')}" target="right">
+                            添加菜单
+                        </a>
+                    </td>
+                </tr>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Menu/lists')}" target="right">
+                            菜单列表
+                        </a>
+                    </td>
+                </tr>
+            </table>
         </td>
         <td width=1 bgcolor=#d1e6f7></td>
     </tr>
