角色功能增加提交

--- a/Application/Admin/View/Index/left.html
+++ b/Application/Admin/View/Index/left.html
@@ -41,7 +41,7 @@
                         <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
                     </td>
                     <td>
-                        <a class="menuchild" href="" target="right">
+                        <a class="menuchild" href="{:U('Self/user_info')}" target="right">
                             个人信息
                         </a>
                     </td>
@@ -51,7 +51,7 @@
                         <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
                     </td>
                     <td>
-                        <a class="menuchild" href="{:U('Site/login')}" target="right">
+                        <a class="menuchild" href="{:U('Self/change_pwd')}" target="right">
                             修改密码
                         </a>
                     </td>
@@ -83,6 +83,66 @@
                     <td>
                         <a class="menuchild" href="{:U('Menu/lists')}" target="right">
                             菜单列表
+                        </a>
+                    </td>
+                </tr>
+            </table>
+            <table cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=22>
+                    <td style="padding-left: 30px" background="/Public/Admin/img/menu_bt.jpg">
+                        <a class=menuparent onclick="expand(30)" href="javascript:void(0);">角色管理</a>
+                    </td>
+                </tr>
+                <tr height=4><td></td></tr>
+            </table>
+            <table id="child30" style="display: none" cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Role/add')}" target="right">
+                            添加角色
+                        </a>
+                    </td>
+                </tr>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Role/lists')}" target="right">
+                            角色列表
+                        </a>
+                    </td>
+                </tr>
+            </table>
+            <table cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=22>
+                    <td style="padding-left: 30px" background="/Public/Admin/img/menu_bt.jpg">
+                        <a class=menuparent onclick="expand(40)" href="javascript:void(0);">管理员管理</a>
+                    </td>
+                </tr>
+                <tr height=4><td></td></tr>
+            </table>
+            <table id="child40" style="display: none" cellspacing=0 cellpadding=0 width=150 border=0>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Adminer/add')}" target="right">
+                            添加管理员
+                        </a>
+                    </td>
+                </tr>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
+                        <a class="menuchild" href="{:U('Adminer/lists')}" target="right">
+                            管理员列表
                         </a>
                     </td>
                 </tr>
