--- a/Application/Admin/View/Role/add.html
+++ b/Application/Admin/View/Role/add.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-    <title>添加菜单</title>
+    <title>添加角色</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <link href="/Public/Admin/css/mine.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="div_head">
         <span>
-            <span style="float:left">当前位置是：菜单管理-》添加菜单信息</span>
+            <span style="float:left">当前位置是：角色管理-》添加角色信息</span>
             <span style="float:right;margin-right: 8px;font-weight: bold">
                 <a style="text-decoration: none" href="{$smarty.const.__MODULE__}/Goods/showlist">【返回】</a>
             </span>
@@ -18,15 +18,11 @@
         <form action="" method="post">
         <table border="1" width="100%" class="table_a">
             <tr>
-                <td>菜单名称</td>
-                <td><input type="text" name="menu_name" /></td>
+                <td>角色名称</td>
+                <td><input type="text" name="role_name" /></td>
             </tr>
             <tr>
-                <td>菜单所属控制器</td>
-                <td><input type="text" name="controllers" /></td>
-            </tr>
-            <tr>
-                <td>菜单备注</td>
+                <td>角色说明</td>
                 <td><input type="text" name="remark" /></td>
             </tr>
             <tr>
@@ -35,6 +31,7 @@
             </tr>
             <tr>
                 <td colspan="2" align="center">
+                    <input type="hidden" name="role_pid" value="{$role_pid}">
                     <input type="button" class="submit_btn" value="添加">
                 </td>
             </tr>
@@ -48,20 +45,18 @@
 <script>
     $(document).ready(function(){
         $('.submit_btn').click(function(){
-            var menu_name = $("input[name='menu_name']").val();
-            if ( menu_name == '' ) {
-//                layer.tips('菜单名称不能为空', "input[name='menu_name']");
-                layer.tips('菜单名称不能为空', "input[name='menu_name']", {
-                    tips: [2, '#3595CC'],
-                    time: 4000
-                });
-//                layer.msg('菜单名称不能为空');
+            var role_pid = $("input[name='role_pid']").val();
+            if ( role_pid == '' ) {
+                layer.msg( '参数丢失，即将重新载入页面' );
+                setTimeout(function(){
+                    self.location.reload();
+                },3000)
                 return false;
             }
 
-            var controllers = $("input[name='controllers']").val();
-            if ( controllers == '' ) {
-                layer.tips('菜单所属控制器不能为空', "input[name='controllers']", {
+            var role_name = $("input[name='role_name']").val();
+            if ( role_name == '' ) {
+                layer.tips('角色名称不能为空', "input[name='role_name']", {
                     tips: [2, '#3595CC'],
                     time: 4000
                 });
@@ -79,22 +74,27 @@
                 return false;
             }
 
-
             var postdata = {};
-            postdata['menu_name'] = menu_name;
-            postdata['controllers'] = controllers;
+            postdata['role_pid'] = role_pid;
+            postdata['role_name'] = role_name;
             postdata['remark'] = remark;
             postdata['rank'] = rank;
 
             $.ajax({
-                url: "{:U('Menu/add')}",
+                url: "{:U('Role/add')}",
                 type: 'POST',
                 dataType: 'json',
                 data: postdata,
                 success:function(data){
                     if ( data.status == 1 ) {
-//                        window.parent.right.location.href = "{:U('Menu/lists')}";
-                        self.location = "{:U('Menu/lists')}";
+                        self.location = "{:U('Role/lists')}";
+                    } else if ( data.status == 2 ) {
+                        layer.msg( data.info );
+                        if ( data.url != '' ) {
+                            setTimeout(function(){
+                                self.location.reload();
+                            },3000)
+                        }
                     } else {
                         layer.msg( data.info );
                         if ( data.url != '' ) {
@@ -105,7 +105,6 @@
                     }
                 }
             })
-
         });
     });
 </script>
