--- a/Application/Admin/View/Adminer/lists.html
+++ b/Application/Admin/View/Adminer/lists.html
@@ -31,9 +31,9 @@
 <body>
     <div class="div_head">
         <span>
-            <span style="float: left;">当前位置是：菜单管理-》菜单列表</span>
+            <span style="float: left;">当前位置是：管理员管理-》管理员列表</span>
             <span style="float: right; margin-right: 8px; font-weight: bold;">
-                <a style="text-decoration: none;" href="{:U('Menu/add')}">【添加菜单】</a>
+                <a style="text-decoration: none;" href="{:U('Aminer/add')}">【添加管理员】</a>
             </span>
         </span>
     </div>
@@ -43,19 +43,23 @@
             <tbody>
                 <tr style="font-weight: bold;">
                     <td><input id="checkall" value="" type="checkbox">全选</td>
-                    <td>菜单名称</td>
-                    <td>菜单所属控制器</td>
-                    <td>菜单备注</td>
-                    <td>排序</td>
+                    <td>用户名</td>
+                    <td>用户角色</td>
+                    <td>创建时间</td>
+                    <td>更新时间</td>
+                    <td>最近登录时间</td>
+                    <td>最近登录IP</td>
                     <td align="center">操作</td>
                 </tr>
                 <volist name="lists" id="vo">
                     <tr>
                         <td><input class="checkboxs" value="{$vo.id}" type="checkbox"></td>
-                        <td>{$vo.menu_name}</td>
-                        <td>{$vo.controllers}</td>
-                        <td>{$vo.remark}</td>
-                        <td>{$vo.rank}</td>
+                        <td>{$vo.user_name}</td>
+                        <td>{$vo.user_roles}</td>
+                        <td>{$vo.create_time}</td>
+                        <td>{$vo.update_time}</td>
+                        <td>{$vo.last_time}</td>
+                        <td>{$vo.last_ip}</td>
                         <td>
                             <a data-id="{$vo.id}" class="btn edit">修改</a>
                             <a data-id="{$vo.id}" class="btn qxgl">权限管理</a>
