给用户添加角色

--- a/Application/Admin/View/Index/left.html
+++ b/Application/Admin/View/Index/left.html
@@ -41,11 +41,12 @@
                         <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
                     </td>
                     <td>
-                        <a class="menuchild" href="{:U('Self/user_info')}" target="right">
-                            个人信息
+                        <a class="menuchild" href="{:U('Super/AdminLv2Lists')}" target="right">
+                            管理员列表
                         </a>
                     </td>
                 </tr>
+
             </table>
             <table cellspacing=0 cellpadding=0 width=150 border=0>
                 <tr height=22>
@@ -110,7 +111,7 @@
             <table cellspacing=0 cellpadding=0 width=150 border=0>
                 <tr height=22>
                     <td style="padding-left: 30px" background="/Public/Admin/img/menu_bt.jpg">
-                        <a class=menuparent onclick="expand(30)" href="javascript:void(0);">角色管理</a>
+                        <a class=menuparent onclick="expand(30)" href="javascript:void(0);">Admin角色管理</a>
                     </td>
                 </tr>
                 <tr height=4><td></td></tr>
@@ -140,7 +141,7 @@
             <table cellspacing=0 cellpadding=0 width=150 border=0>
                 <tr height=22>
                     <td style="padding-left: 30px" background="/Public/Admin/img/menu_bt.jpg">
-                        <a class=menuparent onclick="expand(40)" href="javascript:void(0);">管理员管理</a>
+                        <a class=menuparent onclick="expand(40)" href="javascript:void(0);">Admin用户管理</a>
                     </td>
                 </tr>
                 <tr height=4><td></td></tr>
@@ -152,7 +153,7 @@
                     </td>
                     <td>
                         <a class="menuchild" href="{:U('Adminer/add')}" target="right">
-                            添加管理员
+                            添加用户
                         </a>
                     </td>
                 </tr>
@@ -162,7 +163,7 @@
                     </td>
                     <td>
                         <a class="menuchild" href="{:U('Adminer/lists')}" target="right">
-                            管理员列表
+                            用户列表
                         </a>
                     </td>
                 </tr>
