--- a/Application/Admin/View/Adminer/add.html
+++ b/Application/Admin/View/Adminer/add.html
@@ -28,8 +28,11 @@
             <tr>
                 <td>选择角色</td>
                 <td>
-                    <select name="">
-                        <option value=""></option>
+                    <select name="role_id">
+                        <option value="0">请下拉选择用户角色</option>
+                        <volist name="role_lists" id="vo">
+                            <option value="{$vo.id}">{$vo.role_name}</option>
+                        </volist>
                     </select>
                 </td>
             </tr>
@@ -66,9 +69,12 @@
                 return false;
             }
 
+            var role_id = $("select[name='role_id']").val();
+
             var postdata = {};
             postdata['user_name'] = user_name;
             postdata['password'] = password;
+            postdata['role_id'] = role_id;
 
             $.ajax({
                 url: "{:U('Adminer/add')}",
