管理员权限修改

--- a/Application/Admin/View/Power/children_lists.html
+++ b/Application/Admin/View/Power/children_lists.html
@@ -158,7 +158,7 @@
                     postdata['remark'] = remark;
                     postdata['rank'] = rank;
 
-                    $.ajax({s
+                    $.ajax({
                         url: "{:U('Power/add')}",
                         type: 'POST',
                         dataType: 'json',
