--- a/Application/Admin/View/Index/left.html
+++ b/Application/Admin/View/Index/left.html
@@ -41,12 +41,21 @@
                         <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
                     </td>
                     <td>
+                        <a class="menuchild" href="{:U('Super/RoleLv2Lists')}" target="right">
+                            二级角色列表
+                        </a>
+                    </td>
+                </tr>
+                <tr height=20>
+                    <td align=middle width=30>
+                        <img height=9 src="/Public/Admin/img/menu_icon.gif" width=9>
+                    </td>
+                    <td>
                         <a class="menuchild" href="{:U('Super/AdminLv2Lists')}" target="right">
                             管理员列表
                         </a>
                     </td>
                 </tr>
-
             </table>
             <table cellspacing=0 cellpadding=0 width=150 border=0>
                 <tr height=22>
